css/styles.css
/* ... */
nav {
  font-family: "Sintony", sans-serif;
}

section {
  padding-top: 4rem;
  padding-bottom: 4rem;
  color: var(--clr-neutral-100);
}

section:last-of-type {
  padding-bottom: 3rem;
}

a {
  text-decoration: none;
  color: var(--clr-neutral-100);
  font-weight: 600;
}

/* Utility classes */

.no-padding {
  padding: 0px;
}

.no-margin {
  margin: 0px;
}

.align-vert {
  display: flex;
  align-items: center;
}

.hidden {
  display: none;
}

.align-baseline {
  display: flex;
  align-items: baseline;
}

.justify-right {
  text-align: end;
}

/* .line-spacer {
  line-height: 1.75em;
} */

.text-shadow {
  text-shadow: 2px 2px 8px #000000b1;
}

/* on .dblink */
.box-shadow-dark {
  box-shadow: 3px 4px 0px 0px #111313;
}

/* on .publink and .publink-light */
.box-shadow-light {
  box-shadow: 3px 4px 0px 0px #276873;
}

.section-title {
  padding-bottom: 2rem;
}

.big-text {
  font-size: clamp(2rem, 2rem + 5vw, 7rem);
}

/* ************************** */
/* Fonts */
/* ************************** */

.fjalla {
  font-family: "Fjalla One", sans-serif;
}

.sintony {
  font-family: "Sintony", sans-serif;
}

.sourcesans {
  font-family: "Source Sans 3", sans-serif;
}

/* Font styles (for Source Sans Pro) */

.fw400 {
  font-weight: 400;
}

.bold {
  font-weight: 600;
}

.extrabold {
  font-weight: 700;
}

.italic {
  font-style: italic;
}

/* ************************** */
/* Color palette */
/* ************************** */

.body-color {
  color: var(--clr-primary-700);
}

.logo-color {
  color: var(--clr-primary-200);
}

.clr-primary-200 {
  color: var(--clr-primary-200);
}

.citation {
  color: var(--clr-neutral-700);
}

.light-theme {
  background-color: var(--clr-primary-200);
  color: var(--clr-primary-900);
}

.light-theme a {
  color: var(--clr-primary-700);
  font-weight: 600;
}

.lightest-green {
  color: var(--clr-neutral-200);
}

.blueish-black {
  color: var(--clr-primary-900);
}

.almost-white {
  color: var(--clr-neutral-100);
}

.text-shadow {
  text-shadow: 2px 2px 4px hsla(0, 0%, 0%, 0.337);
}
/* Use to change SVG logo color */
.filter-teal {
  filter: invert(63%) sepia(16%) saturate(712%) hue-rotate(124deg)
    brightness(81%) contrast(85%);
}

.filter-light {
  filter: invert(69%) sepia(34%) saturate(246%) hue-rotate(134deg)
    brightness(93%) contrast(87%);
}

/* Gradients */
.card-gradient {
  background: linear-gradient(
    hsla(180, 53%, 87%, 0.8),
    hsla(187, 48%, 86%, 0.9)
  );
}

/* ************************** */
/* Masks */
/* ************************** */

.light-mask {
  background-color: hsla(0, 0%, 100%, 0.7);
}

.dark-mask {
  background: linear-gradient(rgba(4, 23, 38, 0.8), rgba(4, 23, 38, 0.8));
}

.container {
  --bs-gutter-x: 0rem;
}

.my-container {
  width: min(56.25rem, 90%);
  margin: 0 auto;
}

.my-container[data-width="narrow"] {
  width: min(800px, 90%);
  margin: 0 auto;
}

/* ************************** */
/* Nav */
/* ************************** */

/* Navbar animation */

/* remove border from burger button */
.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none;
  box-shadow: none;
  border: none;
}

/* add animation to burger menu icon */
.navbar-toggler span {
  display: block;
  background-color: #ffffff;
  height: 3px;
  width: 25px;
  margin-top: 5px;
  margin-bottom: 5px;
  position: relative;
  left: 0;
  opacity: 1;
  transition: all 0.2s ease-out;
  transform-origin: center left;
}

.navbar-toggler span:nth-child(1) {
  margin-top: 0.3em;
}

.navbar-toggler:not(.collapsed) span:nth-child(1) {
  transform: translate(15%, -33%) rotate(45deg);
}

.navbar-toggler:not(.collapsed) span:nth-child(2) {
  opacity: 0;
}

.navbar-toggler:not(.collapsed) span:nth-child(3) {
  transform: translate(15%, 33%) rotate(-45deg);
}

.navbar-toggler span:nth-child(1) {
  transform: translate(0%, 0%) rotate(0deg);
}

.navbar-toggler span:nth-child(2) {
  opacity: 1;
}

.navbar-toggler span:nth-child(3) {
  transform: translate(0%, 0%) rotate(0deg);
}

/* Navbar styling */

.navbar-custom {
  background-color: var(--clr-primary-900);
  padding: 0;
}

.navbar-nav .nav-item {
  text-align: center;
  padding-right: 10px;
}

.nav-item a.active {
  color: var(--clr-neutral-100) !important;
}

.nav-link:hover,
.navbar-brand {
  color: var(--clr-primary-200) !important;
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

/* Herobox on homepage */

.hero-container {
  flex-direction: column;
  height: 85vh;
}

.bgimage {
  height: 100vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)),
    url("../images/miranda-lim-and-jonathan-elliott-discuss-sleep-data.webp");
  background-size: cover;
  background-position: center;
  position: relative;
  background-position: 80% 0%;
}

.logo-inline {
  max-height: clamp(2rem, 2rem + 5vw, 7rem);
  display: inline-block;
  position: relative;
  padding-inline: .5rem;
  top: -5px;
  /* padding-left: 1.5vw; */
}

.tagline {
  font-size: clamp(1rem, 0.85rem + 1vw, 4rem);
}

.hero-desc {
  margin-bottom: 0;
}

.blur {
  background: rgba(255, 255, 255, 0.088);
  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

/* Other page jumbotrons */

.jumbotron {
  height: 40vh;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.taller-jumbo {
  height: 60vh;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.jumbo-title {
  padding-top: 20vh;
  /* padding-left: 2rem; */
  text-shadow: 2px 2px 8px #000000b1;
}

.taller-jumbo-title {
  padding-top: 47vh;
  text-shadow: 2px 2px 8px #000000b1;
}

.mycard {
  width: 100%;
  --bs-card-title-spacer-y: 0rem;
}
/* ... */

